# AMP_code

./: CM_and_prediction_resampling.ipynb  CheckNaming.ipynb  CreatureFeatures.ipynb  Gulf 2020 zoo summary data.xlsx  NL 2020 zoo summary data.xlsx  NL 2021 zoo summary data.xlsx  NMDS_ellipses.ipynb  Pacific 2021 zoo summary data.xlsx  README.md  RM-ANOVA.R  Richness_BoxPlots.ipynb  Sample_Dissimilarity.ipynb  StephenBarCharts.R  StephenBarCharts_one_legend.R  StephenNMDS.R  StephenPermanova.R  StephenWilcoxon.R  combine_all_results.ipynb  error_by_phyla.ipynb  f1_by_strategy.ipynb  f1_by_training_image_counts.ipynb  five_thousand_strat4_relabunds_feb4.xlsx  import_ml_df.ipynb  ind_abundance.ipynb  max_strat4_relabunds_feb4.xlsx  morph_features_df.xlsx  rarefaction.ipynb  regional_prediction_strategies.xlsx  species_richness.ipynb  taxa_cleaner.ipynb  taxa_trees.R  training_data_bargraph.ipynb
.ipynb_checkpoints/: CM_and_prediction_resampling-checkpoint.ipynb  CheckNaming-checkpoint.ipynb  (+12 more)
CyrilUnzipped/AMP FlowCam strategy predictions results and reports/EcoTaxa_predictions_querying_and_reporting_codebase/: README.md  building_prediction_scenario_settings.ipynb  building_prediction_scenario_settings.py  collate_models_metrics.py  collecting_results.py  ecotaxa_api_requests.py  ecotaxa_categories_name_id_mapping.py  plotting_helpers.py  predictions_scenarios_factory.py  pyproject.toml  relAbundanceLabels.csv  reporting_helpers.py  reporting_prediction_results_w_md.ipynb  reporting_prediction_results_w_md.py  taxon class names mapping master.xlsx
Past_Code/: CCA.ipynb  (+4 more)
(+42 files in other folders)
