[project]
name = "flowcam_paper_code"
version = "0.1.0"
description = "Python scripts and Jupyter Notebooks to explore the EcoTaxa zooplankton classification predictions output on DFO Flowcam data, using different learning strategies on samples from 4 aquaculture regions."
authors = [
    {name = "Cyril-Aubry",email = "76761963+Cyril-Aubry@users.noreply.github.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
openpyxl = "^3.1.2"
tqdm = "^4.66.1"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"
ipython = "^8.17.2"
seaborn = "^0.13.0"
ecotaxa-py-client = {git = "https://github.com/ecotaxa/ecotaxa_py_client.git"}
ipykernel = "^6.26.0"
reportlab = "^4.0.7"
pypdf2 = "^3.0.1"

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
jupytext = "^1.17.2"
pandas-stubs = "^2.2.3.250527"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
